added a multipliedTotal to the players object if the distance multiplier on. With that I put in some button on the round summary page that will toggle between the net scores and the multiplied scores updating the podium and table accordingly

--- a/index.html
+++ b/index.html
@@ -134,6 +134,10 @@
             <div class="round-summary__container">
                 <div class="round-summary__results">
                     <h2 class="round-summary__results-header neutral-text">Round Results</h2>
+                    <div class="round-summary__results-style-container">
+                        <button type="button" class="round-summary__results-style-net-button montserrat fw-700" id="show-net-results">Net Score</button>
+                        <button type="button" class="round-summary__results-style-multiplied-button montserrat fw-700" id="show-multiplied-results">Mulitplied Score</button>
+                    </div>
                     <div class="round-summary__podium-container">
                         <!-- change to clip path podium -->
                         <div class="round-summary__podium" id="podium-2">
